--- a/sway/config
+++ b/sway/config
@@ -1,15 +1,12 @@
 # Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
-
 
 # Make all new windows tiling by default
 for_window [class=".*"] tiling
 
 ### Variables
-#
+
+
+
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
 # Home row direction keys, like vim
@@ -28,59 +25,35 @@ output eDP-1 resolution 1920x1080 position 0,0 scale 1
 # External HDMI monitor
 output HDMI-A-1 resolution 1920x1080 position 1920,0 scale 1
 
+# sway idle
+exec swayidle -w \
+  timeout 300 'swaylock' \
+
+# swaylock
+bindsym $mod+Shift+p exec swaylock \
+  --screenshots \
+  --effect-blur 7x5 \
+  --clock \
+  --indicator \
+  --ring-color 3c3836 \
+  --inside-color 282828 \
+  --text-color ebdbb2
 
 
 ### Output configuration
-#
+
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg  /home/zeke/Pictures/wallpapers/fish3.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+output * bg  /home/zeke/Pictures/gruvbox/anime-girl2.png fill
 
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input type:touchpad {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-#   input type:keyboard {
-#       xkb_layout "eu"
-#   }
-#
-# You can also configure each device individually.
-# Read `man 5 sway-input` for more information about this section.
 
 # autostart 
-
 exec_always --no-startup-id autotiling
 
 
 ### Key bindings
-#
+
 # Basics:
-#
+
     # Start a terminal
     bindsym $mod+Return exec $term
 
@@ -89,6 +62,18 @@ exec_always --no-startup-id autotiling
 
     # Start your launcher
     bindsym $mod+d exec wofi --show drun
+
+    # webapps 
+    bindsym $mod+y exec --no-startup-id chromium --app=https://www.youtube.com
+
+    bindsym $mod+i exec --no-startup-id chromium --app=https://open.spotify.com/
+
+    bindsym $mod+u exec --no-startup-id chromium --app=https://discord.com/channels/@me
+
+    bindsym $mod+o exec --no-startup-id chromium --app=https://music.youtube.com/
+
+
+
 
 
     # Drag floating windows by holding down $mod and left mouse button.
@@ -103,9 +88,10 @@ exec_always --no-startup-id autotiling
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
-#
+
+
 # Moving around:
-#
+
     # Move your focus around
     bindsym $mod+$left focus left
     bindsym $mod+$down focus down
@@ -152,10 +138,9 @@ exec_always --no-startup-id autotiling
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
 
 # Assign workspaces to external monitor
+
 workspace 1 output HDMI-A-1
 workspace 2 output HDMI-A-1
 workspace 3 output HDMI-A-1
@@ -173,13 +158,9 @@ focus output HDMI-A-1
 workspace 6
 focus output eDP-1
 
-
 #
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
     bindsym $mod+b splith
     bindsym $mod+v splitv
 
@@ -202,8 +183,6 @@ focus output eDP-1
 #
 # Scratchpad:
 #
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
     bindsym $mod+Shift+minus move scratchpad
@@ -215,10 +194,6 @@ focus output eDP-1
 # Resizing containers:
 #
 mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
     bindsym $left resize shrink width 10px
     bindsym $down resize grow height 10px
     bindsym $up resize shrink height 10px
@@ -247,7 +222,8 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
-    bindsym Print exec grim
+    bindsym Shift+Print exec grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%M-%S').png \
+  && notify-send "Screenshot" "Area saved"
 
 # Remove window title bars and borders for all windows
 for_window [class=".*"] border none
@@ -265,21 +241,48 @@ blur_radius 2
 blur_passes 2
 
 ### Blur specific applications ###
+
+# dolphin
 for_window [app_id="org.kde.dolphin"] blur enable
+for_window [app_id="org.kde.dolphin"] opacity 0.92
+
+
+#spotify
+for_window [app_id="spotify"] opacity 0.92
 for_window [app_id="spotify"] blur enable
 
-for_window [app_id="org.kde.dolphin"] opacity 0.92
-for_window [app_id="spotify"] opacity 0.92
 
+# chromium
+for_window [app_id="chromium"] opacity 0.92
+for_window [app_id="chromium"] blur enable
+
+# webapp youtube  (chromium)
+#for_window [title="YouTube"] {
+#    blur enable
+#    opacity 0.92
+#}
+
+# okular 
+for_window [app_id="org.kde.okular"] {
+    blur enable
+    opacity 0.92
+}
+
+
+# webapp discord  (chromium)
+#for_window [title="Discord"] {
+#    blur enable
+#    opacity 0.92
+#}
+
+
+
+
+
+
+
+# dim the inacitve windows 
 default_dim_inactive 0.1
-
-# keep sharp corners (do NOT enable rounded corners)
-# rounded_corners enable   <-- leave this commented
-
-
-
-
-
 
 # Set gaps between windows
 gaps inner 5
@@ -289,8 +292,6 @@ bar {
     # swaybar_command swaybar
     swaybar_command waybar
 
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
     status_command while date +'%Y-%m-%d :: %X'; do sleep 1; done
 
   position bottom
