--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
   "position": "bottom",
   "spacing": 0,
-  "height": 24,
+  "height": 26,
   "reload_style_on_change": true,
   "layer": "top",
   "custom/separator": {
@@ -11,7 +11,10 @@
   },
   "modules-left": [
     "sway/workspaces",
-    "sway/mode"
+    "custom/separator",
+    "sway/mode",
+    "custom/separator",
+    "mpris"
   ],
   "modules-center": [
     "sway/window"
@@ -63,6 +66,7 @@
   "network": {
     "format-wifi": "wifi {essid} ({signalStrength}%)",
     "format-ethernet": "eth {bandwidthDownBits}bps",
+    "on-click": "/home/zeke/airctl/out/airctl.bin",
     "format-disconnected": "no network",
     "interval": 5,
     "tooltip": true
@@ -78,8 +82,32 @@
     "on-click": "pavucontrol",
     "tooltip": true
   },
-  "clock": {
-    "format": "{:%a %d %b %H:%M:%S}"
-  }
+"clock": {
+  "format": "{:%a %d %b %I:%M %p}",
+  "tooltip-format": "{:%A, %d %B %Y}"
+  },
+
+  "mpris": {
+  "format": "{title}",
+  "on-click": "playerctl play-pause",
+  "max-length": 40,
+  "tooltip": true
+},
+
+"sway/workspaces": {
+    "disable-scroll": true,
+    "all-outputs": true,
+    "format": "{name}",
+    "persistent-workspaces": {
+        "1": [],
+        "2": [],
+        "3": [],
+        "4": [],
+        "5": []
+    }
 }
+
+
+}
+
 
